Refactoring: - Updates README - Updates Travis CI scripts - Updates local run/development scripts - Adds lint/test

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 8081;
-    server_name localhost;
+    server_name 0.0.0.0;
     location / {
 	    alias /static-site/;
 	    try_files $uri $uri/ /index.html =404;
